260901 - F-DLV-001 코드 경고 및 설정 정리